--- a/Lighting.vcxproj
+++ b/Lighting.vcxproj
@@ -1,4 +1,4 @@
-<?xml version='1.0' encoding='utf-8'?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003" DefaultTargets="Build" ToolsVersion="15.0">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|x64">
@@ -16,6 +16,7 @@
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>My01_Shaders</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>Teleporting</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
@@ -88,27 +89,27 @@
     <ClCompile Include="includes\GLUtils.cpp" />
     <ClCompile Include="includes\Camera.cpp" />
     <ClCompile Include="includes\ObjParser.cpp" />
-    </ItemGroup>
+  </ItemGroup>
   <ItemGroup>
     <ClInclude Include="MyApp.h" />
     <ClInclude Include="includes\SDL_GLDebugMessageCallback.h" />
     <ClInclude Include="includes\GLUtils.hpp" />
     <ClInclude Include="includes\Camera.h" />
     <ClInclude Include="includes\ObjParser.h" />
-    </ItemGroup>
+  </ItemGroup>
   <ItemGroup>
     <None Include="Vert_PosNormTex.vert" />
     <None Include="Frag_LightingSkeleton.frag" />
-    </ItemGroup>
+  </ItemGroup>
   <ItemGroup>
     <Image Include="Assets\color_checkerboard.png" />
     <Image Include="Assets\MarbleBall.png" />
     <Image Include="Assets\Wood_Table_Texture.png" />
-    </ItemGroup>
+  </ItemGroup>
   <ItemGroup>
     <Text Include="Assets\Suzanne.obj" />
     <Text Include="Assets\MarbleBall.obj" />
-    </ItemGroup>
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
