--- a/Lighting.vcxproj.filters
+++ b/Lighting.vcxproj.filters
@@ -1,4 +1,4 @@
-<?xml version='1.0' encoding='utf-8'?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="4.0">
   <ItemGroup>
     <Filter Include="Source Files">
@@ -63,9 +63,6 @@
   <ItemGroup>
     <None Include="Vert_PosNormTex.vert">
       <Filter>Shaders</Filter>
-    </None>
-    <None Include="Lighting.md">
-      <Filter>ELTE_DEV_ONLY</Filter>
     </None>
     <None Include="Frag_LightingSkeleton.frag">
       <Filter>Shaders</Filter>
